--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 <body>
     <h1>3D Model Prototype</h1>
+	<p>Please Wait!</p>
     <div id="model-container"></div>
     <script type="module" src="./main.js"></script>
     <text>Click and drag to rotate the model. Scroll to zoom in and out.</text>
